[package]
name = "leet_code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[workspace]
members = [
    "examples/pbft",       # Practical Byzantine Fault Tolerance
    "examples/pow",        # Proof of Work
    "examples/lists",      # 链表 https://github.com/rust-unofficial/too-many-lists
    "data_struct",         # 数据结构   
]
