# 配置选项 https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "leet_code"
version = "0.1.0"
edition = "2021"
authors = ["liuzonglin <lzlysfxx@163.com>"]
rust-version = "1.76"
description = """
使用 Rust 解决 Leetcode Code。
"""
repository = "https://github.com/zonglin-hub/leet_code"
readme = "./README.md"
license = "MIT"

[dependencies]
