# 配置选项 https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "leet_code"
version = "0.1.0"
edition = "2021"
authors = ["liuzonglin <lzlysfxx@163.com>"]
# rust-version = "1.78.0"
description = """
使用 Rust 解决 Leetcode Code。
"""
repository = "https://github.com/zonglin-hub/leet_code"
readme = "./README.md"
license = "MIT"

[dependencies]


# Run Command: cargo run --bin hash_map
[[bin]]
name = "hash_map"
path = "algorithm/hash_table.rs"
